Added SonarQube and Allure Framework analysis. Minor changes.