@@ -11,9 +11,9 @@ public class BooleanValueMapper extends AttributeMapper {
     @Override
     public void mapAttribute(Object object, Object value) throws IllegalAccessException {
         if (value == null) {
-            attribute.field.set(object, null);
+            attribute.getField().set(object, null);
         } else {
-            attribute.field.set(object, new Boolean(value.toString()));
+            attribute.getField().set(object, Boolean.valueOf(value.toString()));
         }
     }
 }
