@@ -13,9 +13,9 @@ public class DateValueMapper extends AttributeMapper {
     @Override
     public void mapAttribute(Object object, Object value) throws IllegalAccessException {
         if (value == null) {
-            attribute.field.set(object, null);
+            attribute.getField().set(object, null);
         } else {
-            attribute.field.set(object, new Date(new Long(value.toString())));
+            attribute.getField().set(object, new Date(Long.valueOf(value.toString())));
         }
     }
 }
